# rust-crud

./: .env  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: crud.rs  main.rs  utils.rs
