[package]
name = "auth-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
dotenvy = "0.15.0"
once_cell = "1.13"
